lib_LTLIBRARIES     = libproxy.la
libproxy_la_SOURCES = \
						config_file.c config_file.h \
						misc.c misc.h \
						pac.c pac.h \
						proxy_factory.c proxy_factory.h \
						url.c url.h \
						wpad.c wpad.h \
						wpad_dhcp.c wpad_dhcp.h \
						wpad_dns.c wpad_dns.h \
						wpad_slp.c wpad_slp.h \
						proxy.h

libproxy_la_CFLAGS  = -Wall
libproxy_la_LDFLAGS = -lpthread

include_HEADERS     = proxy.h

